[package]
name = "ceebalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
cln-plugin = "0.1.0"
serde_json = "1.0"
log = "0.4.17"
anyhow = "1.0.57"